syntax = "proto3";

option java_multiple_files = true;
option java_package = "mx.home.protobuf.generated.helloworld";
option java_outer_classname = "HelloWorldProtos";

package helloworld.proto;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}